[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "deformable-conv-pytorch"
version = "0.1.0"
description = "Pure-Pytorch implementation of Deformable Convolution"
readme = "README.md"
authors = [{ name = "giangbang", email = "banggiangle2015@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["deformable", "conv", "pytorch"]
dependencies = [
    "torch",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "torchvision"]

[project.urls]
Homepage = "https://github.com/giangbang/Pure-Pytorch-implementation-Deformable-Convolution"

